--- a/src/app/domains/work-order/components/work-order-details/work-order-details-refactored.component.html
+++ b/src/app/domains/work-order/components/work-order-details/work-order-details-refactored.component.html
@@ -40,13 +40,6 @@
         </ng-template>
       </mat-tab>
 
-      <!-- Remarks Tab -->
-      <!-- <mat-tab label="Remarks">
-        <ng-template matTabContent>
-          <app-wo-remarks-tab [workOrderId]="workOrder.id"></app-wo-remarks-tab>
-        </ng-template>
-      </mat-tab> -->
-
       <!-- Tasks Tab -->
       <mat-tab label="Tasks">
         <ng-template matTabContent>
@@ -60,21 +53,14 @@
         </ng-template>
       </mat-tab>
 
-      <!-- Activity Log Tab -->
-      <!-- <mat-tab label="Activity">
-        <ng-template matTabContent>
-          <app-wo-activity-tab [activityLogs]="activityLogs$ | async"></app-wo-activity-tab>
-        </ng-template>
-      </mat-tab> -->
-
-      <!-- Issues Tab (To be implemented) -->
+      <!-- Issues Tab -->
       <mat-tab label="Issues">
         <ng-template matTabContent>
           <app-wo-issues-tab [workOrderId]="workOrder.id"></app-wo-issues-tab>
         </ng-template>
       </mat-tab>
 
-      <!-- Materials Tab (To be implemented) -->
+      <!-- Materials Tab -->
       <mat-tab label="Materials">
         <ng-template matTabContent>
           <app-wo-materials-tab 
@@ -84,7 +70,7 @@
         </ng-template>
       </mat-tab>
 
-      <!-- Documents Tab (To be implemented) -->
+      <!-- Documents Tab -->
       <mat-tab label="Documents">
         <ng-template matTabContent>
           <div class="tab-placeholder">
@@ -94,7 +80,7 @@
         </ng-template>
       </mat-tab>
 
-      <!-- Expenses Tab (To be implemented) -->
+      <!-- Expenses Tab -->
       <mat-tab label="Expenses">
         <ng-template matTabContent>
           <div class="tab-placeholder">
